Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3620

missing CLF_RENAME_LAST flag in CL_RENME record

XMLWordPrintable

    • 3
    • 9319

      CLF_RENAME_LAST flag is supposed to be set in RENME changelog record
      if the rename operation unlinks the target.

      The following reproducer shows this is not the case in lustre 2.4.0:

      1. touch /mnt/lustre/foo
      2. touch /mnt/lustre/bar
      3. mv /mnt/lustre/foo /mnt/lustre/bar
        mv: overwrite `/mnt/lustre/bar'? yes
      4. lfs changelog lustre
        271361 01CREAT 13:28:02.446421944 2013.07.23 0x0 t=[0x300000400:0x19b51:0x0] p=[0x200000007:0x1:0x0] foo
        271363 01CREAT 13:28:04.815421715 2013.07.23 0x0 t=[0x300000400:0x19b52:0x0] p=[0x200000007:0x1:0x0] bar
        271365 08RENME 13:28:10.255420121 2013.07.23 0x0 t=[0x300000400:0x19b52:0x0] p=[0x200000007:0x1:0x0] bar s=[0x300000400:0x19b51:0x0] sp=[0x200000007:0x1:0x0] foo

      RENME flag is 0x0, should be 0x01.

      The flag was still correct on lustre 2.3.0:
      6 08RENME 13:33:51.820025792 2013.07.23 0x1 t=[0x200000400:0x2:0x0] p=[0x61ab:0x4710a859:0x0] bar s=[0x200000400:0x1:0x0] sp=[0x61ab:0x4710a859:0x0] foo

            bobijam Zhenyu Xu
            leibovici-cea Thomas LEIBOVICI - CEA (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: